<resources>
    <string name="app_name">BetterMe</string>
    <string name="Login">Login</string>
    <string name="need_account_signup">Need Account? SignUp</string>

    <string name="signup">SignUp</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmpass">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="login">btnlogin</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="contact">Contact</string>
</resources>